# mechanical-mcp

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  mechanical_mcp_server.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
examples/: equipment_to_point_mass.py  static_structural_basic.py
